# thing-if-ThingSDK

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.ARM.mkd  README.md  README.mkd  arm-toolchain.cmake  circle.yml  index.html  kii_hidden.h  kii_iot.c  kii_iot.h  kii_iot_application.h  kii_iot_callbacks.h  kii_iot_environment_dependent.h  kii_iot_environment_impl.h  kii_iot_environment_linux.c  kii_thing_if.c  kii_thing_if.h  kii_thing_if_environment_impl.h  kii_thing_if_environment_linux.c  kii_thing_if_test.h  params.json  sdk-info.txt
.circleci/: config.yml
api-doc/: README_8md.html  annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  index.html  kii__thing__if_8h.html  kii__thing__if_8h_source.html  kii__thing__if__environment__impl_8h.html  kii__thing__if__environment__impl_8h_source.html  structkii__thing__if__command__handler__resource__t.html  structkii__thing__if__state__updater__resource__t.html  structkii__thing__if__t.html
api-doc/html/: README_8md.html  annotated.html  classes.html  dir_16becc25fdd29b8f99c3419b9ea9fae6.html  dir_17f51935c7f8c8898bd934a332ac5f6b.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e7b17e93e5de983db984d8a82c6db18e.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  kii__socket__callback_8h.html  kii__socket__callback_8h_source.html  kii__task__callback_8h.html  kii__task__callback_8h_source.html  kii__thing__if_8h.html  kii__thing__if_8h_source.html  kii__thing__if__environment__impl_8h.html  kii__thing__if__environment__impl_8h_source.html  structkii__socket__context__t.html  structkii__thing__if__command__handler__resource__t.html  structkii__thing__if__error__t.html  structkii__thing__if__state__updater__resource__t.html  structkii__thing__if__system__cb__t.html  structkii__thing__if__t.html
api-doc/search/: all_6.js  all_c.js  classes_0.js  defines_0.js  functions_4.js  functions_5.js  pages_0.js  searchdata.js  typedefs_0.js  variables_1.js  variables_2.js  variables_3.js
cc3200-sample/: README.md  Readme  Readme.md  build.sh  ccs.patch
cc3200-sample/freertos_thingsdk_demo/: kii_thing_if_environment_cc3200.c  main.c
circleci_scripts/: release_doc.sh
gt202/: kii_iot_demo.c  kii_iot_demo.h  kii_iot_environment_gt202.c
include/: kii_thing_if.h
linux-sample/: .gitignore  Makefile  README.mkd  air_conditioner-state.json  example.c  example.h  kii_iot_callbacks_impl.c  kii_iot_environment_dependent_impl.c  kii_thing_if_environment_linux.c  smartlight-state.json  sys_cb_linux.c
linux-sample/linux-env/: secure_socket_impl.c  task_impl.c  (+2 more)
pi-sample/: .gitignore  Makefile  README.mkd  example.c  example.h  pi_control.c  pi_control.h  sys_cb_impl.h
rest_api_spec/: onboarding-swagger.yml  trigger-endpoint.yaml
(+66 files in other folders)
